# CS520-Assignment-3-Inverse-Kinematics-with-Skinning

./: ADOLCExample.cpp  EigenSolveExample.cpp  FK.cpp  FK.h  IK.cpp  IK.h  README.md  driver.cpp  minivectorTemplate.h  run.sh  skeletonRenderer.cpp  skeletonRenderer.h  skinning.cpp  skinning.h
armadillo/: cameraPosition.txt  (+5 more)
eigen/unsupported/: CMakeLists.txt  README.txt
eigen/unsupported/Eigen/: CMakeLists.txt
eigen/unsupported/Eigen/CXX11/: CMakeLists.txt
eigen/unsupported/bench/: bench_svd.cpp
eigen/unsupported/doc/: CMakeLists.txt
eigen/unsupported/test/: BVH.cpp  CMakeLists.txt  EulerAngles.cpp  FFT.cpp  FFTW.cpp  NonLinearOptimization.cpp  NumericalDiff.cpp  alignedvector3.cpp  autodiff.cpp  autodiff_scalar.cpp  cxx11_eventcount.cpp  cxx11_maxsizevector.cpp  cxx11_meta.cpp  cxx11_non_blocking_thread_pool.cpp  cxx11_runqueue.cpp  cxx11_tensor_argmax.cpp  cxx11_tensor_argmax_sycl.cpp  cxx11_tensor_assign.cpp  cxx11_tensor_block_access.cpp  cxx11_tensor_broadcast_sycl.cpp  cxx11_tensor_broadcasting.cpp  cxx11_tensor_builtins_sycl.cpp  cxx11_tensor_casts.cpp  cxx11_tensor_chipping.cpp  cxx11_tensor_chipping_sycl.cpp  cxx11_tensor_comparisons.cpp  cxx11_tensor_concatenation.cpp  cxx11_tensor_concatenation_sycl.cpp  cxx11_tensor_const.cpp  cxx11_tensor_contract_sycl.cpp  cxx11_tensor_contraction.cpp  cxx11_tensor_convolution.cpp  cxx11_tensor_convolution_sycl.cpp  cxx11_tensor_custom_index.cpp  cxx11_tensor_custom_op.cpp  cxx11_tensor_custom_op_sycl.cpp  cxx11_tensor_device_sycl.cpp  cxx11_tensor_dimension.cpp  cxx11_tensor_empty.cpp  cxx11_tensor_executor.cpp  (+71 more)
(+1611 files in other folders)
